--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scroll-simple-transfer",
+  "name": "scroll-wallet-transfer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,8 @@
     "ethers": "^5.7.2",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
