--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "alchemy-sdk": "^3.4.2",
     "ethers": "^5.7.2",
     "next": "14.2.13",
     "react": "^18",
